added pid? to namespace and fixed INSTALL file
git-svn-id: http://termite.googlecode.com/svn/trunk@15 9f8eefd0-cc4f-0410-9494-25735503e27b

--- a/INSTALL
+++ b/INSTALL
@@ -5,7 +5,7 @@
 #2 Get the latest Termite and put it in Gambit's lib/ directory
 
 $ cd /usr/local/Gambit-C/current/lib
-$ svn checkout http://termite.googlecode.com/svn/trunk/ termite-read-only
+$ svn checkout http://termite.googlecode.com/svn/trunk/ termite
 
 #3 Compile Termite (optional)
 
